# clarinet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bench-remote-data.mjs  bench-results.feat-replace-curl-shellout-with-worker-thread.json  bench-results.main.json  codecov.yml  comp.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepare-release.sh
.cargo/: config.toml
.config/: nextest.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-sdk.yaml  ci-vscode.yaml  ci.yaml  nix.yaml  release-cli.yaml  release-sdk.yaml  release-vscode.yaml  zizmor.yaml
components/chainhook-sdk/: Cargo.toml
components/chainhook-types/: Cargo.toml
components/chainhook-types/src/: bitcoin.rs  contract_interface.rs  events.rs  lib.rs  rosetta.rs  signers.rs
components/clarinet-cli/: Cargo.toml
components/clarinet-cli/completions/: README.md  _clarinet  _clarinet.ps1  clarinet.bash  clarinet.elv  clarinet.fish
components/clarinet-cli/examples/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
components/clarinet-cli/examples/billboard/: .gitignore  Clarinet.toml  package.json
components/clarinet-cli/examples/billboard/deployments/: default.simnet-plan.yaml
components/clarinet-cli/examples/billboard/tests/: billboard.test.ts
components/clarinet-cli/examples/counter/: Clarinet.toml  package.json
components/clarinet-cli/examples/counter/contracts/: counter-v2.clar  counter.clar
components/clarinet-cli/examples/counter/deployments/: default.devnet-plan.yaml  default.simnet-plan.yaml  increment.devnet-plan.yaml
components/clarinet-cli/examples/counter/tests/: counter.test.ts
components/clarinet-cli/examples/custom-boot-contracts/deployments/: default.simnet-plan.yaml
components/clarinet-cli/examples/simple-nft/: .gitignore  Clarinet.toml  package.json  vitest.config.js
components/clarinet-cli/examples/simple-nft/deployments/: default.simnet-plan.yaml
components/clarinet-cli/examples/simple-nft/tests/: simple-nft.test.ts
components/clarinet-cli/examples/swappool/: .gitignore  package.json
components/clarinet-cli/examples/swappool/deployments/: default.simnet-plan.yaml
components/clarinet-cli/examples/swappool/tests/: empty.test.ts
components/clarinet-cli/src/: bin.rs  lib.rs
components/clarinet-cli/src/deployments/: mod.rs  types.rs
components/clarinet-cli/src/devnet/: package.rs  start.rs
components/clarinet-cli/src/frontend/: cli.rs  dap.rs  mod.rs  telemetry.rs  update_check.rs
components/clarinet-cli/src/generate/: changes.rs  contract.rs  mod.rs  project.rs
components/clarinet-cli/src/lsp/: mod.rs  native_bridge.rs
components/clarinet-cli/tests/: cli.rs  console.rs  mxs_project.rs
components/clarinet-cli/tests/fixtures/mxs/: counter.clar
components/clarinet-cli/wix/: main.wxs
components/clarinet-defaults/: Cargo.toml
components/clarinet-deployments/: Cargo.toml
components/clarinet-files/: Cargo.toml
components/clarinet-format/: Cargo.toml
components/clarinet-sdk/: README.md  tsconfig.base.json
components/clarinet-sdk-wasm/: Cargo.toml  README.md  build.mjs
components/clarinet-utils/: Cargo.toml
components/clarinet-utils/src/: lib.rs
components/clarity-abi-typegen/: Cargo.toml
components/clarity-abi-typegen/src/: lib.rs  naming.rs
components/clarity-events/: Cargo.toml
components/clarity-jupyter-kernel/: Cargo.toml
components/clarity-static-cost/: Cargo.toml
components/clarity-static-cost/src/static_cost/: cost_analysis.rs  cost_functions.rs  error.rs  mod.rs  special_costs.rs  trait_counter.rs
components/clarity-static-cost/tests/: mod.rs
components/observer/: Cargo.toml
components/observer/src/: lib.rs
components/observer/src/event_handler/: http.rs  mod.rs
components/observer/src/hooks/: types.rs
components/observer/src/hooks/bitcoin/: mod.rs
components/observer/src/indexer/: fork_scratch_pad.rs  mod.rs
components/observer/src/indexer/bitcoin/: mod.rs
components/observer/src/indexer/stacks/: blocks_pool.rs  mod.rs  tests.rs
components/observer/src/indexer/tests/: mod.rs
components/observer/src/indexer/tests/helpers/: bitcoin_blocks.rs  bitcoin_shapes.rs  microblocks.rs  mod.rs  stacks_blocks.rs  stacks_events.rs  stacks_shapes.rs  transactions.rs
components/observer/src/types/: bitcoin.rs  mod.rs  rosetta.rs  signers.rs
components/observer/src/utils/: mod.rs
components/stacks-network/: Cargo.toml
components/stacks-network/src/: bitcoin_rpc_client.rs  chainhooks.rs  chains_coordinator.rs  command.rs  event.rs  event_logger.rs  lib.rs  log_event_logger.rs  main.rs  orchestrator.rs  snapshot_extractor.rs
components/stacks-network/src/chainhook/: mod.rs
components/stacks-network/src/chainhook/hooks/: types.rs
components/stacks-network/src/chainhook/hooks/bitcoin/: mod.rs
components/stacks-network/src/chainhook/hooks/bitcoin/tests/: hook_spec_validation.rs  mod.rs
components/stacks-network/src/chainhook/hooks/stacks/: mod.rs
components/stacks-network/src/chainhook/hooks/stacks/tests/: hook_spec_validation.rs
components/stacks-network/src/chainhook/hooks/tests/: mod.rs
components/stacks-network/src/chainhook/hooks/tests/fixtures/: mod.rs
components/stacks-network/src/chainhook/indexer/: fork_scratch_pad.rs  mod.rs
components/stacks-network/src/chainhook/indexer/bitcoin/: mod.rs
components/stacks-network/src/chainhook/indexer/stacks/: blocks_pool.rs  mod.rs  tests.rs
components/stacks-network/src/chainhook/indexer/tests/: mod.rs
components/stacks-network/src/chainhook/indexer/tests/helpers/: bitcoin_blocks.rs  bitcoin_shapes.rs  microblocks.rs  mod.rs  stacks_blocks.rs  stacks_events.rs  stacks_shapes.rs  transactions.rs
components/stacks-network/src/chainhook/observer/: http.rs  mod.rs  tests.rs
components/stacks-network/src/chainhook/types/: rosetta.rs
components/stacks-network/src/chainhook/utils/: mod.rs
components/stacks-network/src/ui/: app.rs  mod.rs  ui.rs
docs/: BEST_PRACTICES.md
scripts/: require-pnpm.mjs
wix/: main.wxs
(+224 files in other folders)
