[workspace]
resolver = "2"
members = [
    "components/clarity-static-cost",
    "components/clarinet-cli",
    "components/clarinet-deployments",
    "components/clarinet-files",
    "components/clarinet-defaults",
    "components/clarinet-format",
    "components/clarinet-utils",
    "components/clarinet-sdk-wasm",
    "components/clarity-lsp",
    "components/clarity-repl",
    "components/clarity-events",
    "components/hiro-system-kit",
    "components/observer",
    "components/stacks-network",
    "components/stacks-rpc-client",
]
default-members = ["components/clarinet-cli"]

# Argon2 key derivation is extremely slow without optimization (245s vs 13s in tests)
[profile.dev.package.argon2]
opt-level = 3

[workspace.package]
version = "3.16.0"

# Keep dependencies sorted alphabetically
[workspace.dependencies]
# stacks-core git dependencies
clarity = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "clarity", default-features = false }
clarity-types = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "clarity-types" }
libsigner = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "libsigner", default-features = false }
stacks-common = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "stacks-common", default-features = false }
pox-locking = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "pox-locking", default-features = false }
stackslib = { git = "https://github.com/stacks-network/stacks-core.git", rev = "549b39f8ede50bf504c25ff1a31fe01e647cfedd", package = "stackslib", default-features = false }

# Internal crates
clarinet-defaults = { path = "components/clarinet-defaults" }

# External crates
aes-gcm = "0.10"
argon2 = "0.5.3"
base58 = "0.2.0"
base64 = "0.22.1"
bitcoin = "0.31.2"
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
bs58 = "0.5"
chrono = "0.4.42"
clap = "4.5.57"
colored = "3"
console_error_panic_hook = "0.1"
crossbeam-channel = "0.5.6"
crossterm = "0.29.0"
dirs = "6.0.0"
divan = "0.1"
futures = "0.3.12"
indexmap = "2.13.0"
indoc = "2.0.3"
js-sys = "0.3.80"
libsecp256k1 = "0.7.2"
mockito = { version = "1.7", default-features = false }
pretty_assertions = "1.4"
rand = "0.8.5"
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rpassword = "7.4"
schemars = "1.2.1"
semver = "1"
serde = "1.0.225"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.4"
signal-hook = "0.4.3"
strum = "0.27.2"
tempfile = "3.24.0"
test-case = "3.1.0"
thiserror = "2"
tikv-jemallocator = "0.6.1"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
toml = { version = "0.5.6", features = ["preserve_order"] }
toml_edit = "0.22"
wasm-bindgen = { version = "0.2.108" }
wasm-bindgen-futures = { version = "0.4.58" }
web-sys = { version = "0.3.85" }
yaml_serde = "0.10.3"

# [patch.'https://github.com/stacks-network/stacks-core.git']
# clarity = { path = "../stacks-core/clarity" }
# clarity-types = { path = "../stacks-core/clarity-types" }
# libsigner = { path = "../stacks-core/libsigner" }
# stacks-common = { path = "../stacks-core/stacks-common" }
# stackslib = { path = "../stacks-core/stackslib" }
# pox-locking = { path = "../stacks-core/pox-locking" }
