[package]
name = "clarinet-cli"
version.workspace = true
edition = "2021"
description = "Clarinet is a simple, modern and opinionated runtime for testing, integrating and deploying Clarity smart contracts."
readme = "README.md"
license = "GPL-3.0"
keywords = ["stacks", "blockchain", "clarity", "smart-contract", "repl"]
exclude = ["examples/**"]
homepage = "https://stackslabs.com/clarinet"
repository = "https://github.com/stx-labs/clarinet"
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
]

[dependencies]
colored = { workspace = true }
crossbeam-channel = "0.5.6"
crossterm = { workspace = true }
indoc = { workspace = true }
ratatui = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
similar = "2.1.0"
tokio = { workspace = true }
toml_edit = { workspace = true }

clarity-repl = { package = "clarity-repl", path = "../clarity-repl" }
clarinet-files = { path = "../clarinet-files" }
clarity-lsp = { path = "../clarity-lsp" }
clarinet-format = { path = "../clarinet-format" }
clarinet-deployments = { path = "../clarinet-deployments" }
clarinet-utils = { path = "../clarinet-utils" }
hiro-system-kit = { path = "../hiro-system-kit" }
stacks-network = { path = "../stacks-network" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { version = "4.4.4" }
tower-lsp-server = { version = "0.23.0" }
segment = { version = "0.2.4", optional = true }
mac_address = { version = "1.1.8", optional = true }

# Must match condition in bin.rs EXACTLY
[target.'cfg(not(any(target_env = "msvc", target_os = "macos")))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[package.metadata.winres]
OriginalFilename = "clarinet.exe"
LegalCopyright = ""
ProductName = "Clarinet"
FileDescription = ""

[lib]
name = "clarinet_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "clarinet"
path = "src/bin.rs"

[features]
default = ["telemetry"]
telemetry = ["segment", "mac_address"]
