[package]
name = "clarinet-utils"
version = "1.0.0"
description = "Clarinet helpers"
license = "MIT"
edition = "2021"

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
bip39 = "2.2.0"
bip32 = "0.5.3"
bs58.workspace = true
libsecp256k1.workspace = true
rand.workspace = true

[lib]
name = "clarinet_utils"
path = "src/lib.rs"
