[package]
name = "clarity-static-cost"
version.workspace = true
edition = "2021"
description = "Static cost analysis for Clarity smart contracts"

[dependencies]
clarity = { workspace = true, default-features = false, features = [
    "developer-mode",
    "devtools",
] }
clarity-types = { workspace = true }
stacks-common = { workspace = true, default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
clarity = { workspace = true, default-features = false, features = [
    "developer-mode",
    "devtools",
    "testing",
] }
stackslib = { workspace = true, default-features = false }
rstest = "0.26.1"
indoc = { workspace = true }

[lib]
name = "clarity_static_cost"
path = "src/lib.rs"
crate-type = ["lib"]
