[package]
name = "stacks-network"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = { workspace= true }
bollard = "0.17"
colored = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order", "arbitrary_precision"] }
yaml_serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.0"
ctrlc = "3.1.9"
reqwest = { workspace = true, features = ["blocking"] }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base58 = { workspace = true }
tokio = { workspace = true}
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
rand = { workspace = true }
flate2 = "1.1.1"
tar = "0.4.45"
indoc = { workspace = true }

clarity = { workspace = true, default-features = false, features = ["slog_json"] }
stacks-common = { workspace = true, default-features = false }
stackslib = { workspace = true }

stacks-rpc-client = { path = "../stacks-rpc-client" }
clarinet-files = { path = "../clarinet-files" }
clarinet-deployments = { path = "../clarinet-deployments" }
hiro-system-kit = { path = "../hiro-system-kit", features = ["log"] }
stacks-codec = { path = "../stacks-codec" }
observer = { path = "../observer" }
libc = "0.2.173"

[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true, features = ["iterator"] }

[features]
default = []
stacks-signers = ["observer/stacks-signers"]

[dev-dependencies]
test-case = { workspace = true }
stacks-rpc-client = { path = "../stacks-rpc-client", features = ["mock"] }

[lib]
name = "stacks_network"
path = "src/lib.rs"
# Default type
# crate-type = ["lib"]
# Use this instead for WASM builds
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stacks-network"
path = "src/main.rs"
